--- a/docker-compose-mongo.yaml
+++ b/docker-compose-mongo.yaml
@@ -2,15 +2,15 @@ version: '3.8'
 services:
   mongo-container:
     image: mongo:latest
-    environment:
-        - MONGO_INITDB_ROOT_USERNAME=root
-        - MONGO_INITDB_ROOT_PASSWORD=pass777
+    # environment:
+    #     - MONGO_INITDB_ROOT_USERNAME=root
+    #     - MONGO_INITDB_ROOT_PASSWORD=pass777
     ports:
       - "27017:27017"
     command: mongod
     volumes:
-      - mongodb_data_container:/data/db
+      - mongodb_data_container2:/data/db
 
 volumes:
-  mongodb_data_container:
+  mongodb_data_container2:
     driver: local
