--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -19,6 +20,7 @@
     "ejs": "^3.1.8",
     "express": "^4.16.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "redis": "^4.6.7",
