--- a/docker-compose-db-only.yaml
+++ b/docker-compose-db-only.yaml
@@ -1,18 +1,12 @@
 version: '3.8'
 services:
-  mongo:
+  mongo-container:
     image: mongo:latest
-    container_name: mongo-container
     ports:
       - "27017:27017"
     command: mongod
     volumes:
       - mongodb_data_container2:/data/db
-  app:
-    build: .
-    container_name: app-container
-    ports:
-      - "3000:3000"
 
 volumes:
   mongodb_data_container2:
