--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,8 @@
-package-lock.json
+# package-lock.json
 /node_modules
-/assets
+/assets/videos/*
+/public/admin/img/thumbnails/*
+/public/site/img/temp/*
 *.yaml
 .env*
 .env
