--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,7 @@
     "get-video-duration": "^1.0.3",
     "http": "0.0.0",
     "jsonwebtoken": "^9.0.1",
+    "memorystore": "^1.6.7",
     "mongodb": "^3.5.2",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
