--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,13 +10,13 @@ services:
     volumes:
       - ./src:/usr/src/app/
       - /usr/src/app/node_modules
-      - /usr/src/app/assets/videos
-      - /usr/src/app/public/admin/img/thumbnails
-      - /usr/src/app/public/site/img/temp
-    # volumes:
-    #   - app-assets:/usr/src/app/assets
-    #   - app-admin-img:/usr/src/app/public/admin/img
-    #   - app-site-img:/usr/src/app/public/site/img
+      - app-assets:/usr/src/app/assets
+      - app-admin-img:/usr/src/app/public/admin/img/thumbnails
+      - app-site-img:/usr/src/app/public/site/img/temp
+      # volumes:
+      # - app-assets:/usr/src/app/assets
+      # - app-admin-img:/usr/src/app/public/admin/img/thumbnails
+      # - app-site-img:/usr/src/app/public/site/img/temp
     env_file: .env.development
     environment:
       - TZ=America/Panama
