--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -3,8 +3,8 @@ services:
   app:
     image: kuzurik797/videoapp-stripe:latest
     pull_policy: always
-    platform: linux/amd64 # or
-    # platform: linux/arm64
+    # platform: linux/amd64 # or
+    platform: linux/arm64
     container_name: app-container
     ports:
       - "80:8080"
