nfs implement step1

--- a/src/.dockerignore
+++ b/src/.dockerignore
@@ -1,8 +1,11 @@
 # package-lock.json
 /node_modules
-/assets/videos/*
-/public/admin/img/thumbnails/*
-/public/site/img/temp/*
+# /assets/videos/*
+# /public/admin/img/thumbnails/*
+# /public/site/img/temp/*
+/assets/*
+/public/admin/*
+/public/site/*
 *.yaml
 .env*
 .env
