--- a/k3s/app-admin-img-pvc.yaml
+++ b/k3s/app-admin-img-pvc.yaml
@@ -4,7 +4,8 @@ metadata:
   name: app-admin-img-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
+  volumeName: nfs-admin-img-pv
