--- a/k3s/app-assets-pvc.yaml
+++ b/k3s/app-assets-pvc.yaml
@@ -4,7 +4,8 @@ metadata:
   name: app-assets-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: 10Gi
+  volumeName: nfs-assets-pv
