--- a/k3s/app-site-img-pvc.yaml
+++ b/k3s/app-site-img-pvc.yaml
@@ -4,7 +4,8 @@ metadata:
   name: app-site-img-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteMany
+  storageClassName: ""
   resources:
     requests:
       storage: 1Gi
