--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -9,41 +9,18 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - nfs-assets:/usr/src/app/assets
-      - nfs-admin-folder:/usr/src/app/public/admin
-      - nfs-site-folder:/usr/src/app/public/site
+      - app-assets:/usr/src/app/assets
+      - app-admin-img:/usr/src/app/public/admin/img/thumbnails
+      - app-site-img:/usr/src/app/public/site/img/temp
     env_file: .env.production
     environment:
       - TZ=America/Panama
       - NODE_ENV=production
 
-  nfs-server:
-    image: itsthenetwork/nfs-server-alpine:latest
-    container_name: nfs-server
-    privileged: true
-    environment:
-      - SHARED_DIRECTORY=/exports
-    ports:
-      - "2049:2049"
-    volumes:
-      - ./exports:/exports
-
 volumes:
-  nfs-assets:
+  app-assets:
     driver: local
-    driver_opts:
-      type: nfs
-      o: addr=127.0.0.1,rw,nfsvers=4
-      device: :/exports/assets
-  nfs-admin-folder:
+  app-admin-img:
     driver: local
-    driver_opts:
-      type: nfs
-      o: addr=127.0.0.1,rw,nfsvers=4
-      device: :/exports/public/admin/img/thumbnails
-  nfs-site-folder:
+  app-site-img:
     driver: local
-    driver_opts:
-      type: nfs
-      o: addr=127.0.0.1,rw,nfsvers=4
-      device: :/exports/public/site/img/temp
