--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -10,8 +10,8 @@ services:
       - "8080:8080"
     volumes:
       - app-assets:/usr/src/app/assets
-      - app-admin-img:/usr/src/app/public/admin/img/thumbnails
-      - app-site-img:/usr/src/app/public/site/img/temp
+      - app-admin:/usr/src/app/public/admin
+      - app-site:/usr/src/app/public/site
     env_file: .env.production
     environment:
       - TZ=America/Panama
@@ -20,7 +20,19 @@ services:
 volumes:
   app-assets:
     driver: local
-  app-admin-img:
+    driver_opts:
+      type: nfs
+      o: addr=192.168.236.172,rw,nfsvers=4
+      device: :/home/vagrant/Code/Video-streaming-app/exports/assets
+  app-admin:
     driver: local
-  app-site-img:
+    driver_opts:
+      type: nfs
+      o: addr=192.168.236.172,rw,nfsvers=4
+      device: :/home/vagrant/Code/Video-streaming-app/exports/public/admin
+  app-site:
     driver: local
+    driver_opts:
+      type: nfs
+      o: addr=192.168.236.172,rw,nfsvers=4
+      device: :/home/vagrant/Code/Video-streaming-app/exports/public/site
