--- a/k3s/app-deployment.yaml
+++ b/k3s/app-deployment.yaml
@@ -26,6 +26,13 @@ spec:
         envFrom:
         - configMapRef:
             name: app-config
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
         volumeMounts:
         - name: app-nfs-exports
           mountPath: /usr/src/app/assets
