--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
