--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "3.2.0",
+    "connect-redis": "^9.0.0",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
@@ -29,6 +30,7 @@
     "fs": "0.0.1-security",
     "get-video-duration": "^1.0.3",
     "http": "0.0.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.1",
     "memorystore": "^1.6.7",
     "mongodb": "^3.5.2",
