--- a/docker-compose-local-mongo.yaml
+++ b/docker-compose-local-mongo.yaml
@@ -1,5 +1,13 @@
 version: '3.8'
 services:
+  redis:
+    image: "redis:7.2-alpine"
+    container_name: redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+    volumes:
+      - /data
   mongo:
     image: mongo:latest
     container_name: mongo-container
