--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -1,5 +1,13 @@
 version: '3.8'
 services:
+  redis:
+    image: "redis:7.2-alpine"
+    container_name: redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+    volumes:
+      - /data
   app:
     image: kuzurik797/videoapp-stripe:latest
     pull_policy: always
@@ -16,6 +24,8 @@ services:
     environment:
       - TZ=America/Panama
       - NODE_ENV=production
+
+
 
 volumes:
   app-assets:
