--- a/src/package.json
+++ b/src/package.json
@@ -36,6 +36,7 @@
     "mongodb": "^3.5.2",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "redis": "^5.8.2",
     "socket.io": "^2.3.0",
     "stripe": "^12.18.0"
   }
