switched to standalone redis deployment

--- a/k3s/app-deployment.yaml
+++ b/k3s/app-deployment.yaml
@@ -1,3 +1,25 @@
+---
+# Standalone Redis Pod
+apiVersion: v1
+kind: Pod
+metadata:
+  name: redis
+  labels:
+    app: redis
+spec:
+  containers:
+    - name: redis
+      image: redis:7.2-alpine
+      ports:
+        - containerPort: 6379
+      volumeMounts:
+        - name: redis-data
+          mountPath: /data
+  volumes:
+    - name: redis-data
+      emptyDir: {}
+---
+# App Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
