--- a/k3s/ingress-nginx.yaml
+++ b/k3s/ingress-nginx.yaml
@@ -1,14 +1,11 @@
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: ingress-nginx
+## Namespace removed; all resources will be in 'default'
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ingress-nginx
-  namespace: ingress-nginx
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -100,13 +97,13 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx
-    namespace: ingress-nginx
+    namespace: default
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ingress-nginx-controller
-  namespace: ingress-nginx
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -134,6 +131,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
           ports:
             - name: http
               containerPort: 80
@@ -156,7 +157,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ingress-nginx-controller
-  namespace: ingress-nginx
+  namespace: default
 spec:
   type: LoadBalancer
   ports:
