nginx via helm chart

--- a/k3s/app-ingress.yaml
+++ b/k3s/app-ingress.yaml
@@ -5,14 +5,14 @@ metadata:
   name: app-ingress
   namespace: default
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
     - host: video.example.com # <-- Replace with your domain
       http:
         paths:
-          - path: /(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
