--- a/k3s/app-ingress.yaml
+++ b/k3s/app-ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/limit-rps: "20"
 spec:
   ingressClassName: nginx
   rules:
