set memory for rate limiting zone

--- a/k3s/helm/ingress-nginx-values.yaml
+++ b/k3s/helm/ingress-nginx-values.yaml
@@ -1,6 +1,7 @@
 # Example custom values for ingress-nginx Helm chart
 controller:
   config:
+    limit-req-zone-size: "10m" 
     limit-req: "20"
   replicaCount: 1
   service:
