--- a/k3s/helm/ingress-nginx-values.yaml
+++ b/k3s/helm/ingress-nginx-values.yaml
@@ -6,9 +6,13 @@ controller:
   replicaCount: 1
   service:
     type: LoadBalancer
-    nodePorts:
-      http: 31155
-      https: 32408
+    # nodePorts removed; using hostPort instead
+    ports:
+      http: 80
+      https: 443
+    hostPort:
+      http: 80
+      https: 443
   ingressClassResource:
     name: nginx
     enabled: true
