--- a/k3s/helm/ingress-nginx-values.yaml
+++ b/k3s/helm/ingress-nginx-values.yaml
@@ -6,13 +6,9 @@ controller:
   replicaCount: 1
   service:
     type: LoadBalancer
-    # nodePorts removed; using hostPort instead
-    ports:
-      http: 80
-      https: 443
-    hostPort:
-      http: 80
-      https: 443
+    nodePorts:
+      http: 31155
+      https: 32408
   ingressClassResource:
     name: nginx
     enabled: true
