--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ usefull-commands.txt
 .vscode/
 k3s/app-configmap.yaml
 k3s/letsencrypt-clusterissuer.yaml
+k3s/app-certificate.yaml
 ks-commands.txt
 k8s-commands.txt
 helm.txt
