started to use envsubst

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@ create-admin.sh
 usefull-commands.txt
 .vscode/
 k3s/app-configmap.yaml
-k3s/letsencrypt-clusterissuer.yaml
-k3s/app-certificate.yaml
+# k3s/letsencrypt-clusterissuer.yaml
+# k3s/app-certificate.yaml
+k3s/variables.env
 ks-commands.txt
 k8s-commands.txt
 helm.txt
