--- a/k3s/app-ingress.yaml
+++ b/k3s/app-ingress.yaml
@@ -7,10 +7,16 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     # nginx.ingress.kubernetes.io/limit-rps: "20"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - ${DOMAIN_NAME}
+      secretName: app-tls
   rules:
-    - host: video.example.com # <-- Replace with your domain
+    - host: ${DOMAIN_NAME}
       http:
         paths:
           - path: /
