added ping-server.yaml, introduced encryption

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ k3s/app-configmap.yaml
 ansible/nfs-server-instructions.txt
 ansible/ansible-commands.txt
 ansible/ansible-to-do-list.md
+ansible/vault.yaml
 k3s/variables.env
 ks-commands.txt
 k8s-commands.txt
