--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,3 @@
-[nfs_servers]
-0.0.0.0 ansible_user=root
-0.0.0.0 ansible_user=main
+[droplets]
+droplet1 ansible_host={{ droplet1_ip }} ansible_user=root
+droplet1 ansible_host={{ droplet1_ip }} ansible_user=main
