ping only one droplet

--- a/ansible/ping-server.yaml
+++ b/ansible/ping-server.yaml
@@ -1,8 +1,8 @@
 ---
-- hosts: droplets
+- hosts: droplet1
   gather_facts: yes
   vars_files:
     - ../vault.yaml
   tasks:
-    - name: Ping NFS server
+    - name: Ping droplet
       ansible.builtin.ping:
