--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,2 @@
 [droplets]
-droplet1 ansible_host={{ droplet1_ip }} ansible_user=root
-droplet1 ansible_host={{ droplet1_ip }} ansible_user=main
+droplet1 ansible_user=root ansible_ssh_private_key_file=/Users/alexander/.ssh/DigitalOcean/root
