--- a/ansible/ping-server.yaml
+++ b/ansible/ping-server.yaml
@@ -2,7 +2,7 @@
 - hosts: droplet1
   gather_facts: yes
   vars_files:
-    - ../vault.yaml
+    - vault.yaml
   tasks:
     - name: Ping droplet
       ansible.builtin.ping:
