--- a/ansible/droplet-setup.yaml
+++ b/ansible/droplet-setup.yaml
@@ -45,6 +45,14 @@
         port: 443
         proto: tcp
 
+    - name: Allow all traffic from localhost
+      ufw:
+        rule: allow
+        from_ip: 127.0.0.1
+        to_ip: 127.0.0.1
+        port: 'any'
+        proto: any
+
     - name: Enable UFW
       ufw:
         state: enabled
