some fixes in ufw-setup.yaml and inventory update

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,3 @@
 [droplets]
 droplet1 ansible_user=main ansible_ssh_private_key_file=/Users/alexander/.ssh/DigitalOcean/main
-droplet1 ansible_user=root ansible_ssh_private_key_file=/Users/alexander/.ssh/DigitalOcean/root
+; droplet1 ansible_user=root ansible_ssh_private_key_file=/Users/alexander/.ssh/DigitalOcean/root
