--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ create-admin.sh
 !docker-compose*.yaml
 .DS_Store
 usefull-commands.txt
+copy-gitignores.txt
 .vscode/
 k3s/app-configmap.yaml
 # k3s/letsencrypt-clusterissuer.yaml
