--- a/ansible/roles/nfs-server/tasks/main.yaml
+++ b/ansible/roles/nfs-server/tasks/main.yaml
@@ -8,15 +8,15 @@
 
 - name: Create export directory
   file:
-    path: /srv/nfs_share
-    state: directory
-    owner: nobody
-    group: nogroup
-    mode: '0777'
+  path: /home/main/Video-streaming-app/exports
+  state: directory
+  owner: nobody
+  group: nogroup
+  mode: '0777'
 
 - name: Configure NFS exports
   copy:
     dest: /etc/exports
     content: |
-      /srv/nfs_share  *(rw,sync,no_subtree_check,no_root_squash)
+      /home/main/Video-streaming-app/exports  10.16.0.5(rw,sync,no_subtree_check)
   notify: Restart NFS
