--- a/ansible/roles/initial-setup/tasks/main.yaml
+++ b/ansible/roles/initial-setup/tasks/main.yaml
@@ -12,6 +12,11 @@
     state: present
     key: "{{ lookup('file', '/Users/alexander/.ssh/DigitalOcean/main.pub') }}"
 
+- name: Set password for non-root user
+  user:
+    name: main
+    password: "{{ main_user_password }}"
+
 - name: Disable root login in sshd_config
   lineinfile:
     path: /etc/ssh/sshd_config
