--- a/ansible/test-each-role.yaml
+++ b/ansible/test-each-role.yaml
@@ -1,8 +1,8 @@
 ---
-- name: Test nf role
+- name: Test docker-setup role
   hosts: droplets
   become: yes
   vars_files:
     - vault.yaml
   roles:
-    - nfs-server
+    - docker-setup
