--- a/ansible/test-each-role.yaml
+++ b/ansible/test-each-role.yaml
@@ -1,8 +1,8 @@
 ---
-- name: Test docker-setup role
+- name: Test k3s role
   hosts: droplets
   become: yes
   vars_files:
     - vault.yaml
   roles:
-    - docker-setup
+    - k3s
